--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>My Static Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
@@ -13,22 +13,22 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="https://www.linkedin.com/in/riya-sharma-5888r/">Contact</a></li>
+                <li><a href="https://www.linkedin.com/in/mbali-matlakane-bba222187/">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>About me</h2>
-        <p>Hi there! My name is Riya and I'm a DevOps Engineer.</p>
+        <p>Hi there! My name is Mbali.</p>
         <p>I love deploying the application in AWS Cloud and learning new technologies.</p>
         <section>
             <h2>Contact Me</h2>
-            <p>You can contact me at <a href="https://www.linkedin.com/in/riya-sharma-5888r/" title="LinkedIn"
+            <p>You can contact me at <a href="https://www.linkedin.com/in/mbali-matlakane-bba222187/" title="LinkedIn"
                     class="btn btn-linkedin btn-lg"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Riya Sharma</p>
+        <p>&copy; 2023 Mbali Matlakane</p>
     </footer>
 </body>
 
