--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Hi there! My name is Mbali.</p>
         <p>I love deploying the application in AWS Cloud and learning new technologies.</p>
         <section>
-            <h2>Contact Me</h2>
+            <h2>Contact</h2>
             <p>You can contact me at <a href="https://www.linkedin.com/in/mbali-matlakane-bba222187/" title="LinkedIn"
                     class="btn btn-linkedin btn-lg"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></p>
         </section>
